--- a/index.html
+++ b/index.html
@@ -11,19 +11,32 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <main class="wrapper">
+    <img class="image" src="/images/image-header-desktop.jpg" alt="">
+    <div class="content">
+      <h1 class="title">Get <span class="accent-color">insights</span> that help your business grow.</h1>
+      <p class="main-paragraph">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+        experience, and overall efficiency.</p>
+      <ul class="stats">
+        <li class="stats__companies">
+          <p class="stats__number">10k+</p>
+          <p class="stats__type">companies</p>
+        </li>
+        <li class="templates">
+          <p class="stats__number">314</p>
+          <p class="stats__type">templates</p>
+        </li>
+        <li class="queries">
+          <p class="stats__number">12m+</p>
+          <p class="stats__type">queries</p>
+        </li>
+      </ul>
+    </div>
+  </main>
 
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Fiver</a>.
+  </footer>
 </body>
 </html>
