lots of basic styling done

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
   <main class="wrapper">
     <img class="image" src="/images/image-header-desktop.jpg" alt="">
     <div class="content">
-      <h1 class="title">Get <span class="accent-color">insights</span> that help your business grow.</h1>
+      <h1 class="title">Get <span class="title--accent">insights</span> that help your business grow.</h1>
       <p class="main-paragraph">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.</p>
       <ul class="stats">
-        <li class="stats__companies">
+        <li class="stats__stat">
           <p class="stats__number">10k+</p>
           <p class="stats__type">companies</p>
         </li>
-        <li class="templates">
+        <li class="stats__stat">
           <p class="stats__number">314</p>
           <p class="stats__type">templates</p>
         </li>
-        <li class="queries">
+        <li class="stats__stat">
           <p class="stats__number">12m+</p>
           <p class="stats__type">queries</p>
         </li>
